--- a/deedy_resume-reversed.tex
+++ b/deedy_resume-reversed.tex
@@ -90,7 +90,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.60\textwidth}
+\begin{minipage}[t]{0.6\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
@@ -99,26 +99,30 @@
 \section{Experience}
 \runsubsection{PuStack}
 \descript{| Software Development Intern }
-\location{Sep 2020 – Dec 2020 | Work from home}
+\location{Sep 2020 – Dec 2020 | Remote Work}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Wrote and reviewed code for cross-platform apps built on Flutter.
-\item Created cross-platform apps efficiently as per company requirement with Firebase as the backend.
-\item Created scripts to automate common tasks and increase productivity.
-\item Integrated Razorpay Payment Gateway. Utilized Cloud Functions to create web-hook end-points for the Razorpay events.
-\item Customised pre-built calendar package for the live sessions.
+\item Handled Mobile and Website programming tasks (primarily using Flutter), working an average of 20 hours per week.
+% while maintaining a 9.89 CGPA.
+% \item Resolved technical issues by leveraging strengths in coding and debugging.
+\item Rewrote and reviewed code for cross-platform apps efficiently.
+\item Coded cross-platform apps. Deployed them to Firebase as backend.
+\item Programmed scripts to automate common tasks and increase productivity.
+\item Integrated Razorpay Payment Gateway. Utilized Cloud Functions to create webhook endpoints for the events.
+% \item Customised pre-built calendar package for the live sessions.
 \end{tightemize}
 \sectionsep
 
 \runsubsection{The Healthy Company}
 \descript{| Flutter Development Intern }
-\location{Apr 2020 – Sep 2020 | Work from home}
+\location{Apr 2020 – Sep 2020 | Remote Work}
 \begin{tightemize}
 \item Developed cross-platform app \textbf{\href{https://www.thehealthycompany.in/eva/}{EVA: AI Health Coach}} with Flutter. 
-\item Recommends a personalized diet, food diary and healthy recipes according to the user's preferred food and special medical conditions.
+\item Resolved technical issues by leveraging strengths in coding and debugging.
 \item Integrated Razorpay Payment Gateway in the app.
-\item Increase the app's engagement by using Dynamic Links, Cloud Messaging, Remote Config tools. 
-\item Provide the app analytics using the Debug View tool.
+\item Boosted app's engagement by using Dynamic Links, Cloud Messaging, Remote Config tools. 
+% \item Provide the app analytics using the Debug View tool.
+\item Diagramed Entity Relationship Model of the app
 \end{tightemize}
 \sectionsep
 
@@ -156,9 +160,9 @@
 \begin{tightemize}
 \item Project won Hacka-demic Hackathon.
 \item \textbf{\href{https://airpower.ishandeveloper.com/}{Airpower}} is a collection of complete end-to-end services. 
-\item Based on an IoT device. All-in-one energy management solution.
+\item Energy management solution based on an IoT device.
 \item Replacement for existing energy meters.
-\item Two platforms for our services: web based admin dashboard and flutter based app for consumers.
+\item SaaS products: web based admin dashboard and app for consumers.
 \end{tightemize}
 \sectionsep
 
@@ -277,13 +281,14 @@ Chitkara Institute of Engineering and Technology \\
 
 \section{Skills}
 \subsection{Programming}
-Java \textbullet{} C/C++ 
-Dart \textbullet{} JavaScript 
-Matlab Python \\
+Java \textbullet{} C/C++ \textbullet{}
+Dart \textbullet{} JavaScript \textbullet{}
+HTML Python \\
 \sectionsep
 
 \subsection{Technology}
-Flutter \textbullet{} Git/Github \textbullet{} Firebase \textbullet{} Windows Azure \textbullet{} Automation \\
+Flutter \textbullet{} Git/Github \textbullet{} Firebase \textbullet{}  Azure  Automation \\
+Android Studio \textbullet{} VS Code \textbullet{} Windows 
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
