--- a/deedy_resume-reversed.tex
+++ b/deedy_resume-reversed.tex
@@ -80,6 +80,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Himanshu Sharma}{ %\urlstyle{same}\href{http://example.com}{example.com}| \href{http://example2.co}{example2.co}\\
 \href{mailto:contact@himanshusharma.tech}{contact@himanshusharma.tech} |
+\href{tel:+919634549381}{9634549381} |
 \href{https://himanshusharma.tech}{himanshusharma.tech} 
 % \href{tel:+919634549381}{+919634549381}
 }
@@ -98,17 +99,18 @@
 
 \section{Experience}
 \runsubsection{PuStack}
-\descript{| Software Development Intern }
+\descript{| Software Development Engineer Intern }
 \location{Sep 2020 – Dec 2020 | Remote Work}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Handled Mobile and Website programming tasks (primarily using Flutter), working an average of 20 hours per week.
+\item  Integrated Razorpay into PuStack's products with Firebase cloud functions and Node.js.
+% \item Handling full stack programming tasks for the development of the cross-platform app.
 % while maintaining a 9.89 CGPA.
 % \item Resolved technical issues by leveraging strengths in coding and debugging.
-\item Rewrote and reviewed code for cross-platform apps efficiently.
-\item Coded cross-platform apps. Deployed them to Firebase as backend.
-\item Programmed scripts to automate common tasks and increase productivity.
-\item Integrated Razorpay Payment Gateway. Utilized Cloud Functions to create webhook endpoints for the events.
+\item Rewrote parts of the cross-platform code to make it efficient.
+\item Implemented location-based features while integrating 3rd party services.
+% \item Utilized Firebase as backend for Flutter Web Apps.
+\item Programmed a fully automated CI/CD pipeline cutting deployment time by 3x.
 % \item Customised pre-built calendar package for the live sessions.
 \end{tightemize}
 \sectionsep
@@ -117,12 +119,18 @@
 \descript{| Flutter Development Intern }
 \location{Apr 2020 – Sep 2020 | Remote Work}
 \begin{tightemize}
-\item Developed cross-platform app \textbf{\href{https://www.thehealthycompany.in/eva/}{EVA: AI Health Coach}} with Flutter. 
-\item Resolved technical issues by leveraging strengths in coding and debugging.
-\item Integrated Razorpay Payment Gateway in the app.
-\item Boosted app's engagement by using Dynamic Links, Cloud Messaging, Remote Config tools. 
-% \item Provide the app analytics using the Debug View tool.
-\item Diagramed Entity Relationship Model of the app
+\item Optimized \textbf{\underline{\href{https://www.thehealthycompany.in/eva/}{EVA: AI Health Coach}}} app for improved performance up to ??.
+% \item Developed new and customization of the existing features for the . 
+\item Resolved N?? technical issues by leveraging strengths in coding and debugging.
+% \item Integrated Razorpay Payment Gateway in the app.
+% \item Boosted app's engagement by understanding user's behaviour using Firebase Analytics.
+\item Helped boost user engagement up by 23$\%$ using Firebase Dynamic Links, Cloud Messaging, and Remote Config tools.
+% \item Boosted app's user engagement up to 23$\%$ using Firebase Dynamic Links, Cloud Messaging, and Remote Config tools. 
+% \item Analyzed user behaviour using Firebase Analytics and Debug View.
+% \item Designed data schemas to handle RESTful APIs w/JSON.
+% \item Diagramed Entity Relationship/Widget Treeco of the app.
+% \item Documented all related work per company's methodology.
+\item Documented solution architecture for the high-volume customers-facing app ensuring high code maintainability.
 \end{tightemize}
 \sectionsep
 
@@ -141,53 +149,71 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Projects}
-\runsubsection{GitHub Wrapped}
-\descript{
-% | Project for Distributed Client-Server Programming
-}
-\location{Dec 2020 – Present}
+\runsubsection{Relic Bazaar}
+\descript{| Project for Hack20 Flutter Hackathon}
+\location{Jun 2020 – Present | Flutter, Firebase, Node.js}
 \begin{tightemize}
-\item \textbf{\href{https://githubwrapped.tech/}{githubwrapped.tech}}, a website to retrieve annual contributions of a developer.
-\item Utilizing the GitHub GraphQL API.
-\item 2k+ report share on Twitter with tag GitHubWrapped. 
-\item\textbf{\href{https://twitter.com/GitHubWrapped}{GitHubWrapped}} bot to retweet the tweets.
+\item \textbf{\underline{\href{https://github.com/himanshusharma89/relic_bazaar}{Relic Bazaar}}} a retro theme based e-commerce application for antiques.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{GitHub Wrapped}
+\descript{}
+\location{Dec 2020 | JS, GraphQL, Heroku}
+\begin{tightemize}
+\item \textbf{\underline{\href{https://githubwrapped.tech/}{githubwrapped.tech}}}, website to retrieve annual contributions of a developer on GitHub.
+\item 2k+ reports shared on Twitter by \textbf{\underline{\href{https://twitter.com/GitHubWrapped}{GitHubWrapped}}} bot
 \end{tightemize}
 \sectionsep
 
 \runsubsection{AirPower}
-\descript{}
-\location{Dec 2020 – Present}
+\descript{| Hackathon Winning Project}
+\location{Dec 2020 | Flutter, JS, Python, Arduino}
 \begin{tightemize}
-\item Project won Hacka-demic Hackathon.
-\item \textbf{\href{https://airpower.ishandeveloper.com/}{Airpower}} is a collection of complete end-to-end services. 
-\item Energy management solution based on an IoT device.
-\item Replacement for existing energy meters.
-\item SaaS products: web based admin dashboard and app for consumers.
+\item \textbf{\underline{\href{https://devfolio.co/submissions/airpower}{Airpower}}} an IoT based energy management solution and replacement for energy meters.
+% \item SaaS products: web based admin dashboard and app for consumers.
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Community App Boilerplate}
-\descript{}
-\location{Mar 2020 – Present}
+\runsubsection{Swaasthi}
+\descript{| Project for DSC Solution Challenge'21}
+\location{Mar 2021 - Present | Flutter, Firebase}
 \begin{tightemize}
-\item Project under GSSOC'20.
-\item \textbf{\href{https://github.com/smaranjitghose/girlscript_app}{Boilerplate App}} for any technical community.
-\item Easy to pick up and use without any hustle.
-\item Share member’s achievements and upcoming opportunities.
+\item \textbf{\underline{\href{https://github.com/smaranjitghose/girlscript_app}{Boilerplate App}}} for any technical community to use.
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Blog App}
-\descript{}
-\location{Nov 2019 – Present 
-% | Mississippi State, MS
-}
-\begin{tightemize}
-\item \textbf{\href{http://www.chit-chat.net/}{Blog App}}, an anonymous blog creation application.
-\item Real-time blog creation without any communication and account creation.
-\item Utilizing a Firebase backend
-\end{tightemize}
-\sectionsep
+% \runsubsection{100DaysOfFlutter}
+% \descript{
+% % | Project for Distributed Client-Server Programming
+% }
+% \location{Sep 2020 – Feb 2021 | Flutter, Node.js, Azure, Heroku}
+% \begin{tightemize}
+% \item \textbf{\underline{\href{https://100daysofflutter.azurewebsites.net/}{Flutter web app}}}, created for beginner to start Flutter Development.
+% % \item Deployed to Azure App Service as an Node.js app.
+% % \item 2k+ report share on Twitter with tag GitHubWrapped. 
+% \item\textbf{\underline{\href{https://twitter.com/100xFlutter}{100DaysOfFlutter}}} bot to track the 100DaysOfFlutter tag on Twitter.
+% \end{tightemize}
+% \sectionsep
+
+% \runsubsection{Community App Boilerplate}
+% \descript{| Project for GSSOC'20}
+% \location{Mar 2020 – Feb 2021 | Flutter, Firebase}
+% \begin{tightemize}
+% \item \textbf{\underline{\href{https://github.com/smaranjitghose/girlscript_app}{Boilerplate App}}} for any technical community to use.
+% \end{tightemize}
+% \sectionsep
+
+% \runsubsection{Blog App}
+% \descript{}
+% \location{Nov 2019 – Present | Flutter, Firebase
+% % | Mississippi State, MS
+% }
+% \begin{tightemize}
+% \item \textbf{\underline{\href{https://github.com/himanshusharma89/Flutter-Blog-App}{Blog App}}}, an anonymous real-time blog creation application without any communication and account creation.
+% % \item Created using Flutter Framework and utilizing Firebase backend
+% \end{tightemize}
+% \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     RESEARCH
@@ -261,18 +287,16 @@
 \hfill
 \begin{minipage}[t]{0.35\textwidth}
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     EDUCATION
+%     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Education}
-
-\subsection{Chitkara University}
-\descript{BE in Computer Science and Engineering}
-\location{Expected Jul 2022 | Patiala, IN}
-Chitkara Institute of Engineering and Technology \\
-% Dean's List (All Semesters) \\
-\location{ Cum. GPA: 9.89 / 10.0}
+\section{Links}
+Github:// \href{https://github.com/himanshusharma89}{\bf himanshusharma89} \\
+LinkedIn://  \href{https://www.linkedin.com/in/himanshusharma89}{\bf in/himanshusharma89} \\
+% Twitter:// @\href{https://twitter.com/_SharmaHimanshu}{\bf \_SharmaHimanshu} \\
+Blog://  \href{https://blog.himanshusharma.tech/}{\bf blog.himanshusharma.tech}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -281,14 +305,37 @@ Chitkara Institute of Engineering and Technology \\
 
 \section{Skills}
 \subsection{Programming}
-Java \textbullet{} C/C++ \textbullet{}
-Dart \textbullet{} JavaScript \textbullet{}
-HTML Python \\
+% Dart \textbullet{} Javascript \textbullet{} Java \textbullet{} C
+\begin{tabular}{ll}
+\textbullet{} Dart &\textbullet{} Javascript \\
+\textbullet{} Java &\textbullet{} C
+\end{tabular}
 \sectionsep
 
-\subsection{Technology}
-Flutter \textbullet{} Git/Github \textbullet{} Firebase \textbullet{}  Azure  Automation \\
-Android Studio \textbullet{} VS Code \textbullet{} Windows 
+\subsection{Tools \& Technologies}
+\begin{tabular}{ll}
+\textbullet{} Flutter& \textbullet{} Git    \\
+\textbullet{} Firebase& \textbullet{} AWS Amplify \\
+\textbullet{} Heroku & \textbullet{} Node.js \\
+\textbullet{} GraphQL & \textbullet{} MongoDB Atlas    \\
+\textbullet{} GitHub Action     & \textbullet{} CodeMagic  \\
+\textbullet{} Android Studio & \textbullet{} VS Code \\
+\textbullet{} Markdown& \textbullet{} Tex \\
+\end{tabular} 
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     EDUCATION
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Education}
+
+\subsection{Chitkara University}
+\descript{Bachelor of Engineering in Computer Science and Engineering}
+\location{Expected Jun 2022 | Patiala, IN}
+% Chitkara Institute of Engineering and Technology \\
+% Dean's List (All Semesters) \\
+\location{ Cum. GPA: 9.91 / 10.0}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -314,44 +361,39 @@ Android Studio \textbullet{} VS Code \textbullet{} Windows
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Awards}
-\subsection{Honors}
-\begin{tabular}{rll}
-2020        & Hackathon & Hacka-demic Winner\\
-2020        & Hackathon & CodeOff Winner\\
-2020        & $\alpha$  & Microsoft Learn \\ 
-& & Student Ambassador\\
-2020        & 8\textsuperscript{th}/1500+ & GSSOC'20\\
-2019        & 5\textsuperscript{th}/150+ & JGEC JWOC'19\\
+\section{Achievements}
+\subsection{Hackathons}
+\begin{tabular}{ll}
+2020 &  CodeOff (Winner)\\
+ & Hacka-demic 3.0 (Winner)\\
 \end{tabular}
 \sectionsep
-\subsection{Volunteering }
-\begin{tabular}{rll}
-2020        & Hackathon & HackOff 3.0 Mentor\\
-2020        & Hackathon & OctaHacks 3.0 Mentor\\
+\\
+GSSOC'21 Project Admin \\
+$\alpha$ lvl  Microsoft Learn Student Ambassador\\
+8/1500+ GSSOC'20\\
+
+% \subsection{Volunteering }
+% \begin{tabular}{rll}
+
+% \end{tabular}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     COMMUNITY SERVICE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Community Activity}
+
+\begin{tabular}{lll}
+2019     &Writer     &Flutter Community\\
+& (100k+ reach) & \\
+2020 & Organiser &\href{https://flutterchd.web.app/}{\bf Flutter Chandigarh} \\
+2021 & Organiser &\href{https://youtu.be/_wC_0Irja2k?t=380}{\bf Flutter Engage India}\\
+2021 &  Mentor & Hachowasp 3.0\\
+2020 & Mentor & HackOff 3.0\\
+2020 & Mentor & OctaHacks 3.0\\
 \end{tabular}
-\sectionsep
-\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Societies
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{Societies}
-% IEEE\\
-% Scrum Alliance Certified ScrumMaster\\
-% Shackouls Honors College\\
-% National Merit Scholarship Finalist \\
-% \sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     LINKS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Links}
-Github:// \href{https://github.com/himanshusharma89}{\bf himanshusharma89} \\
-LinkedIn://  \href{https://www.linkedin.com/in/himanshusharma89}{\bf in/himanshusharma89} \\
-Twitter:// @\href{https://twitter.com/_SharmaHimanshu}{\bf \_SharmaHimanshu}
 \sectionsep
 
 \end{minipage}
